# ObjectDection

./: CMakeLists.txt  README.md
HOG-SVM/: CMakeLists.txt  Introduction.txt
HOG-SVM/opencv-HOG-SVM/: CMakeLists.txt
HOG-SVM/opencv_HOG_SVM/: HOG+SVM.cpp  Unity.h
HOG-SVM/opencv_HOG_SVM/Pedestrians64x128/: HOG_SVM.txt  TrainData.txt
HOG-SVM/opencv_HOG_SVM/Pedestrians64x128/Negative/: FileNameList.txt
HOG-SVM/opencv_HOG_SVM/Pedestrians64x128/Positive/: FileNameList.txt
HOG-SVM/opencv_HOG_SVM/Pedestrians64x128/TestData/: FileNameList.txt
HOG-SVM/opencv_SVM/: CMakeLists.txt  opencv_SVM.cpp
HOG-SVM/train_HOG/: CMakeLists.txt
Haar-AdaBoosting/: CMakeLists.txt
Haar-AdaBoosting/opencv-haar-boosted/: CMakeLists.txt  objectDetection.cpp
Haar-AdaBoosting/traincascade/: classify.bat
Haar-AdaBoosting/traincascade/data/: stage0.xml  stage1.xml  stage3.xml  stage7.xml
Haar-AdaBoosting/traincascade/pos_image/: get_pos.bat
Utility/: CMakeLists.txt
imagewatch_in_visualStudio/: CMakeLists.txt  ImageWatch.cpp
opencv-HOG-SVM/: HOG+SVM.cpp
opencv-haar-boosted/: CMakeLists.txt  objectDetection.cpp
python/: ResizeImg.py  batch_file_rename.py  createSample.py  hog.py  hog_feature.py
traincascade/: classify.bat  createsamples.bat
traincascade/data/: cascade.xml  params.xml  stage2.xml  stage4.xml  stage5.xml  stage6.xml  stage8.xml  stage9.xml
traincascade/pos_image/: pos.vec
